[gd_scene load_steps=2 format=3 uid="uid://cbt3mmfhdt1v0"]

[ext_resource type="Script" path="res://Scenes/game_controller.gd" id="1_dqsyn"]

[node name="GameController" type="Node2D"]
script = ExtResource("1_dqsyn")

[node name="Pop Bubble" type="Button" parent="."]
offset_left = 320.0
offset_top = 269.0
offset_right = 514.0
offset_bottom = 347.0
text = "Pop Bubble"

[node name="Get Bubble Wrap" type="Button" parent="."]
offset_left = 563.0
offset_top = 268.0
offset_right = 769.0
offset_bottom = 352.0
text = "Get Bubble Wrap"

[node name="Next Shift" type="Button" parent="."]
offset_left = 815.0
offset_top = 64.0
offset_right = 975.0
offset_bottom = 117.0
text = "Next Shift"

[node name="PopCount" type="TextEdit" parent="."]
offset_left = 427.0
offset_top = 85.0
offset_right = 660.0
offset_bottom = 129.0
text = "Pop Count: 0"

[node name="ShiftTimer" type="TextEdit" parent="."]
offset_left = 429.0
offset_top = 23.0
offset_right = 662.0
offset_bottom = 67.0
text = "Shift Timer: 00:00"

[node name="BubbleCount" type="TextEdit" parent="."]
offset_left = 425.0
offset_top = 143.0
offset_right = 658.0
offset_bottom = 187.0
text = "Bubble Count: 0"

[connection signal="pressed" from="Pop Bubble" to="." method="_on_pop_bubble_pressed"]
[connection signal="pressed" from="Get Bubble Wrap" to="." method="_on_get_bubble_wrap_pressed"]
[connection signal="pressed" from="Next Shift" to="." method="_on_get_bubble_wrap_pressed"]
[connection signal="pressed" from="Next Shift" to="." method="_on_next_shift_pressed"]
